Update tmux.conf for tmux 2.4
For now, it is no longer possible to make custom choice mode
keybindings.

--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -139,16 +139,16 @@ setw -g mode-keys vi
 # https://github.com/myfreeweb/dotfiles/blob/master/tmux.conf
 bind-key Escape copy-mode
 bind-key v copy-mode
-bind-key -t vi-copy Escape cancel
+bind-key -T copy-mode-vi Escape send -X cancel
 bind-key p paste-buffer
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy V select-line
-bind-key -t vi-copy r rectangle-toggle
-bind-key -t vi-copy Home start-of-line
-bind-key -t vi-copy End end-of-line
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi r send -X rectangle-toggle
+bind-key -T copy-mode-vi Home send -X start-of-line
+bind-key -T copy-mode-vi End send -X end-of-line
 # using tmux-yank instead now
 # yank; I added copy pipe so I don't have to hit prefix c-c to copy to clipboard..
-# bind-key -t vi-copy y copy-pipe "xsel -ib"
+# bind-key -t copy-mode-vi y send -X copy-pipe "xsel -ib"
 
 # open up to 2000 lines of pane history in actual editor
 bind-key u capture-pane -S -2000 \; save-buffer /tmp/tmux-buffer \; \
@@ -156,41 +156,21 @@ bind-key u capture-pane -S -2000 \; save-buffer /tmp/tmux-buffer \; \
 
 # https://github.com/bunnyfly/dotfiles/blob/master/tmux.conf
 # Colemak Keys
-bind-key -t vi-copy n cursor-down
-bind-key -t vi-copy e cursor-up
-bind-key -t vi-copy i cursor-right
-bind-key -t vi-copy k search-again
-bind-key -t vi-copy K search-reverse
-bind-key -t vi-copy l start-of-line
-bind-key -t vi-copy L end-of-line
-bind-key -t vi-copy j next-word-end
-bind-key -t vi-copy J next-space-end
-# bind-key -t vi-copy c-n bottom-line
-# bind-key -t vi-copy c-m middle-line
-# bind-key -t vi-copy c-e top-line
+bind-key -T copy-mode-vi n send -X cursor-down
+bind-key -T copy-mode-vi e send -X cursor-up
+bind-key -T copy-mode-vi i send -X cursor-right
+bind-key -T copy-mode-vi k send -X search-again
+bind-key -T copy-mode-vi K send -X search-reverse
+bind-key -T copy-mode-vi l send -X start-of-line
+bind-key -T copy-mode-vi L send -X end-of-line
+bind-key -T copy-mode-vi j send -X next-word-end
+bind-key -T copy-mode-vi J send -X next-space-end
 
 # pretty much always searching backwards
-bind-key -t vi-copy / search-backward
-bind-key -t vi-copy ? search-forward
+bind-key -T copy-mode-vi / send -X search-backward
+bind-key -T copy-mode-vi ? send -X search-forward
 
-# * Choice Mode
-# for example, when selecting window with prefix w
-# https://github.com/bunnyfly/dotfiles/blob/master/tmux.conf
-bind-key -t vi-choice n down
-bind-key -t vi-choice e up
-bind-key -t vi-choice h tree-collapse
-bind-key -t vi-choice i tree-expand
-
-# * Edit Mode
-# colemak (bunnfly's config as well)
-bind-key -ct vi-edit n history-down
-bind-key -ct vi-edit e history-up
-bind-key -ct vi-edit s switch-mode
-#bind-key -ct vi-edit S switch-mode-begin-line
-bind-key -ct vi-edit l start-of-line
-bind-key -ct vi-edit L end-of-line
-bind-key -ct vi-edit j next-word-end
-bind-key -ct vi-edit J next-space-end
+# TODO add back choice and edit bindings when possible
 
 # * External Scripts
 # cmatrix screensaver
