Update tmux keys to open the pane in emacs

--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -150,10 +150,6 @@ bind-key -T copy-mode-vi End send -X end-of-line
 # yank; I added copy pipe so I don't have to hit prefix c-c to copy to clipboard..
 # bind-key -t copy-mode-vi y send -X copy-pipe "xsel -ib"
 
-# open up to 2000 lines of pane history in actual editor
-bind-key u capture-pane -S -2000 \; save-buffer /tmp/tmux-buffer \; \
-	new-window "$EDITOR /tmp/tmux-buffer"
-
 # https://github.com/bunnyfly/dotfiles/blob/master/tmux.conf
 # Colemak Keys
 bind-key -T copy-mode-vi n send -X cursor-down
@@ -178,10 +174,14 @@ bind-key -T copy-mode-vi ? send -X search-forward
 # set -g lock-after-time 120
 # set -g lock-command "/usr/bin/cmatrix -C blue"
 
+# open pane history in editor
+bind-key / capture-pane \; save-buffer /tmp/tmux-buffer \; \
+	new-window "$EDITOR /tmp/tmux-buffer"
+
 # url hinting using link-hint.el
 # https://github.com/noctuid/link-hint.el#using-for-links-in-terminal-with-tmux
 bind-key f capture-pane \; save-buffer /tmp/tmux-buffer \; \
-	run 'emacsclient -t -e "(find-file \"/tmp/tmux-buffer\")" -e "(goto-address-mode)" -e "(link-hint-open-link)" -e "(kill-this-buffer)" -e "(delete-frame)"'
+	new-window 'emacsclient -t -e "(find-file \"/tmp/tmux-buffer\")" -e "(goto-address-mode)" -e "(link-hint-open-link)" -e "(kill-this-buffer)" -e "(delete-frame)"'
 
 # * Plugins
 # List of plugins
@@ -189,9 +189,10 @@ bind-key f capture-pane \; save-buffer /tmp/tmux-buffer \; \
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-yank'
-# needs some work
-# set -g @fingers-key f
-set -g @plugin 'Morantron/tmux-fingers'
+
+# doesn't allow custom keys doesn't easily allow keybindings for both copying
+# and opening
+# set -g @plugin 'Morantron/tmux-fingers'
 # can't be done with letters: https://github.com/tmux-plugins/tmux-urlview
 # tmux-open is even worse and requires actually selecting the item in copy-mode
 
