Add temporary workaround for xyne repo

--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -85,13 +85,15 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
-[xyne-x86_64]
-# A repo for Xyne's own projects: http://xyne.archlinux.ca/projects/
-# Packages for the "x86_64" architecture.
+[xyne-i686]
+# A repo for Xyne's own projects: https://xyne.archlinux.ca/projects/
+# Packages for the "i686" architecture.
 # Note that this includes all packages in [xyne-any].
-# https://bbs.archlinux.org/viewtopic.php?pid=1584029#p1584029
-# SigLevel = Required
-Server = http://xyne.archlinux.ca/repos/xyne
+SigLevel = Required
+# Temporarily broken due to host error.
+#Server = https://xyne.archlinux.ca/repos/xyne
+# Workaround
+Server = https://xyne.archlinux.ca/bin/repo.php?file=
 
 [repo-ck]
 Server = http://repo-ck.com/$arch
