Use geoclue for redshift

--- a/common/.config/redshift.conf
+++ b/common/.config/redshift.conf
@@ -3,12 +3,8 @@
 temp-night=2100
 transition=1
 gamma=0.8:0.7:0.8
-location-provider=manual
-adjustment-method=vidmode
-
-[manual]
-lat=39.9833
-lon=-82.9833
+location-provider=geoclue2
+adjustment-method=randr
 
 ; In this example screen 1 is adjusted by vidmode. Note
 ; that the numbering starts from 0, so this is actually
