Start using DNSCrypt again
Also add missing salt-config script.

--- a/root/etc/systemd/system/connman.service.d/override.conf
+++ b/root/etc/systemd/system/connman.service.d/override.conf
@@ -1,4 +1,5 @@
 # https://wiki.archlinux.org/index.php/DNSCrypt
 [Service]
 ExecStart=
-ExecStart=/usr/bin/connmand -n --nodnsproxy
+# don't alter resolv.conf or act as a DNS proxy
+ExecStart=/usr/bin/env connmand -n --nodnsproxy
