--- a/root/etc/unbound/unbound.conf
+++ b/root/etc/unbound/unbound.conf
@@ -1,13 +1,30 @@
-# https://github.com/jedisct1/dnscrypt-proxy
 server:
   use-syslog: yes
   username: "unbound"
   directory: "/etc/unbound"
-  trust-anchor-file: trusted-key.key
-  # for dnscrypt
+  hide-identity: yes
+  hide-version: yes
+  # for dnscrypt need to query localhost
   do-not-query-localhost: no
+  # needs to be created by user; using fcron to update for now
+  # also see https://wiki.archlinux.org/index.php/unbound#Roothints_systemd_timer
+  root-hints: "root.hints"
+  # DNSSEC (significantly increases initial lookup time before caching)
+  # this exists by default
+  # trust-anchor-file: "trusted-key.key"
+  # instead, automatically update (see warning in unbound-anchor manpage)
+  # directory must be writable by unbound user; see unbound.conf manpage
+  # also https://wiki.archlinux.org/index.php/unbound#Automatic_updates
+  auto-trust-anchor-file: "trusted-key.key"
+  # also see /etc/systemd/system/unbound.service.d/override.conf
 
-# for dnscrypt
+# https://github.com/jedisct1/dnscrypt-proxy
 forward-zone:
   name: "."
-  forward-addr: 127.0.0.1@40
+  # unbound is using port 53, so dnscrypt needs to use different port(s)
+  forward-addr: 127.0.0.1@5301
+  forward-addr: 127.0.0.1@5302
+
+# https://github.com/jedisct1/dnscrypt-proxy/issues/19
+remote-control:
+  control-enable: no
