Switch to udiskie
Udevil/devmon hasn't been update since 2015, and udiskie notifications
work without configuration and on unmount. Also add a udev rule to mount
under /media (now using udisks2). Use a systemd user service instead of
starting in .profile.

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -167,9 +167,8 @@ map tv shell gvim --remote %f
 # map tV shell vim --servername termgeneral --remote-tab-silent %f
 
 # umount all
-map uN shell devmon --unmount-all --no-gui
-# umount most recently mounted
-map un shell devmon --unmount-recent --no-gui
+map uN shell udiskie-umount all
+map un shell udiskie-umount %f
 # eject tray
 map ue shell sudo eject /dev/sr0
 
