Start using tmsu

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -175,6 +175,11 @@ map ue shell sudo eject /dev/sr0
 # see https://github.com/noctuid/tdrop
 map th shell tdrop toggle_auto_hide
 
+# tagging
+map ta console shell tmsu -D "$(df -P ./ | awk 'NR==2{print $NF}')/.tmsu/db" tag%space
+map tm shell tmsu mount "$(df -P ./ | awk 'NR==2{print $NF}')/tmsu"
+map tu shell tmsu unmount -a
+
 # recently used folders
 map gr shell ~/bin/ranger/recent_folders.sh database &
 map gR shell ~/bin/ranger/recent_folders.sh ag-sys &
