Update tmux keybinding for opening history in editor
Open more history not just visible pane.

--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -175,7 +175,7 @@ bind-key -T copy-mode-vi ? send -X search-forward
 # set -g lock-command "/usr/bin/cmatrix -C blue"
 
 # open pane history in editor
-bind-key / capture-pane \; save-buffer /tmp/tmux-buffer \; \
+bind-key / capture-pane -S -10000 \; save-buffer /tmp/tmux-buffer \; \
 	new-window "$EDITOR /tmp/tmux-buffer"
 
 # url hinting using link-hint.el
