Update xyne repo

--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -85,9 +85,9 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
-[xyne-i686]
+[xyne-x86_64]
 # A repo for Xyne's own projects: https://xyne.archlinux.ca/projects/
-# Packages for the "i686" architecture.
+# Packages for the "x86_64" architecture.
 # Note that this includes all packages in [xyne-any].
 SigLevel = Required
 # Temporarily broken due to host error.
