--- a/root/etc/unbound/unbound.conf
+++ b/root/etc/unbound/unbound.conf
@@ -21,10 +21,10 @@ server:
 # https://github.com/jedisct1/dnscrypt-proxy
 forward-zone:
   name: "."
-  # unbound is using port 53, so dnscrypt needs to use different port(s)
-  forward-addr: 127.0.0.1@5301
-  forward-addr: 127.0.0.1@5302
+  # unbound is using port 53, so dnscrypt needs to use a different port
+  forward-addr: 127.0.0.1@5353
 
+# all old issues are gone; maybe try wayback
 # https://github.com/jedisct1/dnscrypt-proxy/issues/19
 remote-control:
   control-enable: no
