Make mpv screenshot keybindings asynchronous

--- a/media/.mpv/input.conf
+++ b/media/.mpv/input.conf
@@ -43,9 +43,12 @@ i seek 5
 # pause and play
 o cycle pause
 
-# screen shots
-t screenshot
-T screenshot video # ...without subtitles
+# screenshots
+s async screenshot
+# without subtitles
+S async screenshot video
+t async screenshot
+T async screenshot video
 
 # zooming/kind of
 z ignore
