New installation on two SSDs
- Add full installation scripts and packages list (used for new installation today)
- Switch from truecrypt to full disk encryption (LVM on LUKS)
- Increase tmpfs size
- Start using skylake ck kernel (was incorrectly using ivybridge kernel)
- Use fstrim.timer instead of mounting with discard (periodic instead of
  continuous)
- Start using Colemak-DH in console as well (can't type normal Colemak
  anymore; user password was the only thing I could type in Colemak)

--- a/root/boot/efi/EFI/refind/refind.conf
+++ b/root/boot/efi/EFI/refind/refind.conf
@@ -9,21 +9,34 @@ scanfor manual,internal
 
 menuentry "Arch Linux CK" {
 	icon     /EFI/refind/icons/os_arch.png
-	volume   boot_ssd
+	# label
+	volume   boot
 	# these are relative to the volume! (actually /boot/vmlinuz...)
-	loader   /vmlinuz-linux-ck-ivybridge
-	initrd   /initramfs-linux-ck-ivybridge.img
-	options  "root=LABEL=root_ssd rw rootflags=noatime,discard elevator=bfq quiet nosplash"
+	loader   /vmlinuz-linux-ck-skylake
+	initrd   /initramfs-linux-ck-skylake-custom.img
+	# scsi_mod.use_blk_mq=1 needed for scsi and sata drives now for bfq
+	# elevator=bfq does not work anymore; need udev rule
+	# https://wiki.archlinux.org/index.php/Silent_boot
+	# cryptdevice=LABEL=cryptlinux (requires systemd-git)
+	options  "cryptdevice=UUID=a2220ef6-6250-4426-96d4-ae19d61fce88:cryptlinux:allow-discards resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
+
 	submenuentry "Boot using fallback initramfs" {
-		initrd /initramfs-linux-ck-fallback.img
+		initrd /initramfs-linux-ck-custom-fallback.img
+	}
+	submenuentry "Boot using systemd initramfs" {
+		initrd /initramfs-linux-ck-skylake-custom-systemd.img
+		options  "rd.luks.uuid=a2220ef6-6250-4426-96d4-ae19d61fce88:cryptlinux rd.luks.options=discard resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
+	}
+	submenuentry "Boot using fallback systemd initramfs" {
+		initrd /initramfs-linux-ck-skylake-custom-systemd-fallback.img
+		options  "rd.luks.uuid=a2220ef6-6250-4426-96d4-ae19d61fce88:cryptlinux rd.luks.options=discard resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
 	}
 	submenuentry "Boot using default linux" {
-		options "root=LABEL=root_ssd rw"
 		loader /vmlinuz-linux
-		initrd /initramfs-linux.img
+		initrd /initramfs-linux-ck-skylake-custom-vanilla.img
 	}
 	submenuentry "Boot using fallback default linux" {
 		loader /vmlinuz-linux
-		initrd /initramfs-linux-fallback.img
+		initrd /initramfs-linux-ck-skylake-custom-vanilla-fallback.img
 	}
 }
