Rename preset so initramfs automatically generated
Though all presets would automatically be generated after kernel update;
tested and wasn't the case. Knew I was going to probably break booting
if I didn't overwrite the default configs or run mkinitcpio
--all-presets always after updating. Forgot about it, updated (kernel),
and rebooted. Couldn't boot linux or windows (since haven't repaired
windows yet). Old arch linux live usb was too old to mount my luks
partition and didn't have enough space to do anything (e.g. download
updated iso). Luckily, I'd just bought several usbs to make live usbs
with. Plugged two in; downloaded an arch iso to one with wget, and made
the other a live usb. Bad idea waiting on this, but better late than
never.

--- a/root/etc/mkinitcpio-custom-systemd.conf
+++ b/root/etc/mkinitcpio-custom-systemd.conf
@@ -4,7 +4,7 @@ BINARIES=()
 
 FILES=()
 
-# see /etc/mkinitcpio.d/custom.preset for info
+# see /etc/mkinitcpio.d/linux-ck-skylake.preset for info
 HOOKS=(base systemd autodetect keyboard sd-vconsole modconf block sd-encrypt sd-lvm2 filesystems fsck)
 
 # faster decompression
