--- a/root/etc/mkinitcpio.conf
+++ b/root/etc/mkinitcpio.conf
@@ -4,7 +4,7 @@ BINARIES=()
 
 FILES=()
 
-# see /etc/mkinitcpio.d/custom.preset for info
+# see /etc/mkinitcpio.d/linux-ck-ckylake.preset for info
 HOOKS=(base udev autodetect keyboard keymap consolefont modconf block encrypt lvm2 filesystems resume fsck)
 
 # faster decompression
