--- a/root/etc/unbound/unbound.conf
+++ b/root/etc/unbound/unbound.conf
@@ -1,5 +1,7 @@
 server:
   use-syslog: yes
+  # necessary for default systemd service to work; don't fork
+  do-daemonize: no
   username: "unbound"
   directory: "/etc/unbound"
   hide-identity: yes
