Update gpg config files
- Move to common
- Enable ssh agent support for gpg-agent
- Get rid of old gpg backup function (.gnupg and .ssh folders are
 already backed up for borg_minimal)

--- a/common/.gnupg/gpg.conf
+++ b/common/.gnupg/gpg.conf
@@ -2,10 +2,10 @@
 # suppress the initial copyright message
 no-greeting
 # use agent whenever need password; so can store in keychain
-# arch wiki says need to start beforehand; this is a lie, gpg-agent will start automatically
+# necessary for gnupg 1; with gnupg 2.1, agent will be started on demand when
+# required
 use-agent
 
-# store passwords in cache longer (seconds)
 # set stronger algorithms first (for key gen)
 personal-digest-preferences SHA512
 cert-digest-algo SHA512
