Update xyne pacman server location

--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -90,10 +90,7 @@ Include = /etc/pacman.d/mirrorlist
 # Packages for the "x86_64" architecture.
 # Note that this includes all packages in [xyne-any].
 SigLevel = Required
-# Temporarily broken due to host error.
-#Server = https://xyne.archlinux.ca/repos/xyne
-# Workaround
-Server = https://xyne.archlinux.ca/bin/repo.php?file=
+Server = https://xyne.archlinux.ca/repos/xyne
 
 [repo-ck]
 Server = http://repo-ck.com/$arch
