--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -192,6 +192,11 @@ map gR shell ~/bin/ranger/recent_folders.sh ag-sys &
 map t. source ~/.config/ranger/rc.conf
 map tr reload_cwd
 
+# maximze image preview toggle
+alias maximize_preview chain set column_ratios 1,10; map tm reset_columns
+alias reset_columns chain set column_ratios 1,3,5; map tm maximize_preview
+map tm maximize_preview
+
 map , mark_files toggle=True
 map tm tag_toggle
 map x mark_files toggle=True
