Update geoclue.conf with new defaults

--- a/root/etc/geoclue/geoclue.conf
+++ b/root/etc/geoclue/geoclue.conf
@@ -1,9 +1,16 @@
+# Configuration file for Geoclue
+#
+# NOTE: All configurations settings below are mandatory and the defaults are
+#       what you see before you edit them. If you want to keep the default
+#       values around, copy and comment out the appropriate line(s) before
+#       changing them.
+
 # Agent configuration options
 [agent]
 
 # Whitelist of desktop IDs (without .desktop part) of all agents we recognise,
 # separated by a ';'.
-whitelist=gnome-shell
+whitelist=geoclue-demo-agent;gnome-shell;io.elementary.desktop.agent-geoclue2
 
 # Network NMEA source configuration options
 [network-nmea]
@@ -11,8 +18,29 @@ whitelist=gnome-shell
 # Fetch location from NMEA sources on local network?
 enable=true
 
+# 3G source configuration options
+[3g]
+
+# Enable 3G source
+enable=true
+
+# CDMA source configuration options
+[cdma]
+
+# Enable CDMA source
+enable=true
+
+# Modem GPS source configuration options
+[modem-gps]
+
+# Enable Modem-GPS source
+enable=true
+
 # WiFi source configuration options
 [wifi]
+
+# Enable WiFi source
+enable=true
 
 # URL to the wifi geolocation service. The key can currenty be anything, just
 # needs to be present but that is likely going to change in future.
@@ -21,6 +49,11 @@ url=https://location.services.mozilla.com/v1/geolocate?key=16674381-f021-49de-86
 # To use the Google geolocation service instead of mozilla's, simply uncomment
 # this url while changing API_KEY to your Google API key and comment out or
 # remove the url above.
+#
+# WARNING: Please make sure that you are complying with the Google's ToS and
+#          policies if you uncomment this:
+#
+# https://developers.google.com/maps/documentation/geolocation/policies
 #
 #url=https://www.googleapis.com/geolocation/v1/geolocate?key=AIzaSyDwr302FpOSkGRpLlUpPThNTDPbXcIn_FM
 
@@ -45,6 +78,12 @@ submission-nick=geoclue
 #       ensure that system components and applications with built-in
 #       authorization mechanism (e.g web browsers) do not have to be bound to
 #       agents.
+#
+#       If your application is denied access to location information and your
+#       operating system doesn't provide any mechanism to change that, it is
+#       likely a bug in your operation system (or geoclue). The solution is to
+#       report the issue with all details, rather than adding your application
+#       to this list.
 #
 # Format:
 #
@@ -72,6 +111,11 @@ system=true
 users=
 
 [org.gnome.Shell]
+allowed=true
+system=true
+users=
+
+[io.elementary.desktop.agent-geoclue2]
 allowed=true
 system=true
 users=
