Update redshift.conf to use time instead of geoclue

--- a/common/.config/redshift.conf
+++ b/common/.config/redshift.conf
@@ -1,14 +1,20 @@
 [redshift]
-;temp-day=5700
-temp-night=2100
-transition=1
-gamma=0.8:0.7:0.8
-location-provider=geoclue2
 adjustment-method=randr
 
-; In this example screen 1 is adjusted by vidmode. Note
-; that the numbering starts from 0, so this is actually
-; the second screen.
-[vidmode]
+; default night temperature 4500
+; https://iristech.co/what-is-the-best-color-temperature/
+temp-night=1900
+
+; use clock instead of location provider (have had issues with geoclue and
+; prefer picking the times manually)
+dawn-time=08:00
+dusk-time=20:00
+
+; fade in new screen temperature
+transition=1
+
+gamma=0.8:0.7:0.8
+
+[randr]
+; only change temperature for screen 0 (by default)
 screen=0
-; screen=1
