Ranger - Update config (really old changes)
- Open images with pqiv (rifle)
- Open epubs with zathura (rifle)
- Make sxiv_opener alteration work with pqiv
- Use org style headings instead of vim folds
- Remove tmux keybindings
- Add some extra keybindings (travel, hardlink pasting, etc.)
- Use fira code nerd font in kitty for ranger devicons

--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -1,4 +1,6 @@
 # see /usr/share/doc/ranger/config/rifle.conf
+# TODO
+# - Add back -- since may use with programs besides ranger
 
 # Notes:
 # - Unlike rc.conf and commands.py, a user's rifle.conf does not inherit from
@@ -20,10 +22,10 @@ mime ^text, label editor = $EDITOR "$@"
 # text/plain even when file --mimetype says they are
 ext org, label editor = $EDITOR "$@"
 ext 1, label pager = man "$1"
-mime ^text, label pager  = "$PAGER" "$@"
+mime ^text, label pager = "$PAGER" "$@"
 
 # audio
-mime ^audio|ogg$, terminal, has mpv = mpv --no-audio-display "$@"
+mime ^audio|ogg$, terminal, has mpv = mpv --term-osd-bar --no-audio-display "$@"
 
 # video
 mime ^video, has mpv, X, flag f = tdrop -a auto_hide && mpv --loop=inf "$@" && tdrop -a auto_show
@@ -34,12 +36,13 @@ mime ^video, terminal, !X, has vlc = vlc "$@"
 # images
 # mime ^image/svg, has inkscape, X, flag f = inkscape "$@"
 mime ^image/svg, has display, X, flag f = display "$@"
-# mime ^image, has pqiv, X, flag f = tdrop -a auto_hide && pqiv "$@" && tdrop -a auto_show
-mime ^image, has sxiv, X, flag f = tdrop -a auto_hide && sxiv -a "$@" && tdrop -a auto_show
+
+mime ^image, has pqiv, X, flag f = tdrop -a auto_hide && pqiv "$@" && tdrop -a auto_show
+
 ext xcf, X, flag f = gimp "$@"
 
 # pdf
-ext pdf|djvu, has zathura, X, flag f = tdrop -a auto_hide && zathura "$@" && tdrop -a auto_show
+ext pdf|djvu|epub, has zathura, X, flag f = tdrop -a auto_hide && zathura "$@" && tdrop -a auto_show
 # ext pdf, has apvlv, X, flag f = apvlv "$@"
 
 # word
@@ -49,6 +52,8 @@ ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has libreoffice, X, f
 ext exe = wine "$1"
 # needs higher precedence than archives
 ext jar, flag f = java -jar "$1"
+# TODO can detect that an archive contains images?
+ext cbr|zip, flag f = tdrop -a auto_hide && pqiv -n "$1" && tdrop -a auto_show
 
 # archives
 ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz, has atool = atool -l "$@" | "$PAGER"
