--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -14,7 +14,7 @@
 
 # uses for setlocal?
 
-# Settings {{{
+# * Settings
 set column_ratios 1,3,5
 set dirname_in_tabs true
 # no clickable padding when no preview
@@ -36,6 +36,9 @@ set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp|fasl)$|^lost\+found$|^__(py)?cache__$
 # works with xterm, urxvt, termite (now requires patch), gnome-terminal,
 # and other vte terminals with and without tmux
 set preview_images true
+# doesn't work in tmux
+# set preview_images_method kitty
+# set preview_images_method pqiv
 
 # open all images in folder with image viewer when none selected
 # opens in ranger order but doesn't work if thousands of images in folder
@@ -45,74 +48,14 @@ set open_all_images true
 set max_history_size 30
 set max_console_history_size 100
 
-# smart case find (f)
-alias find scout -aets
+# make find filter (trying out)
+alias find scout -aefst
 
-# }}}
+# don't allow letter skipping/fuzzy finding with travel
+alias travel scout -aefkst
 
-# Mappings {{{
-# WM Experimentation {{{
-# change comment char to #
-# straight from .vimrc; change nnoremap <silent> to "map"
-# change ":silent !" to "shell -s "
-# remove <cr>.*$
-# Tmux Experimentation {{{
-# "r" is Redraw {{{
-# window switching {{{
-map ra shell -s wm_action inpt ra
-map rr shell -s wm_action inpt rr
-map rs shell -s wm_action inpt rs
-map rt shell -s wm_action inpt rt
-map rd shell -s wm_action inpt rd
-map rh shell -s wm_action inpt rh
-map rn shell -s wm_action inpt rn
-map re shell -s wm_action inpt re
-map ri shell -s wm_action inpt ri
-map ro shell -s wm_action inpt ro
-# }}}
-# resize panes {{{
-map rmh shell -s wm_action inpt rmh
-map rmn shell -s wm_action inpt rmn
-map rme shell -s wm_action inpt rme
-map rmi shell -s wm_action inpt rmi
-# }}}
-# circulate
-# previous
-map r, shell -s wm_action inpt r,
-# next
-map r. shell -s wm_action inpt r.
-
-# new window
-map rc shell -s wm_action inpt rc
-# kill pane
-map rx shell -s wm_action inpt rx
-# last window
-map rl shell -s wm_action inpt rl
-# split windows
-map r/ shell -s wm_action inpt r/
-map r- shell -s wm_action inpt r-
-
-# break pane
-map r! shell -s wm_action inpt rbang
-
-# take from old s<keys> bindings {{{
-# last pane
-map ru shell -s wm_action inpt ru
-# zoomed pane toggle
-map rk shell -s wm_action inpt rk
-# fullscreen
-map rf shell -s wm_action inpt rf
-# sticky
-map ry shell -s wm_action inpt ry
-# main-vertical layout
-map rv shell -s wm_action inpt rv
-
-# }}}
-# }}}
-# }}}
-# }}}
-
-# Shell Commands: {{{
+# * Mappings
+# ** Shell Commands
 unmap dD
 # to trash with trash-cli instead of delete
 map di shell trash-put %s || trash-put %f
@@ -127,6 +70,7 @@ map cw shell bgset --store -z %f
 # image magick
 # change rotation; image rotate with imagemagick
 map cr shell mogrify -rotate 90 %f
+map cR shell mogrify -rotate 270 %f
 # flop (mirror image) to new name
 map cm shell convert -flop %f flopped_%f
 
@@ -141,6 +85,9 @@ map cU shell upscale %f 10
 map ct shell unoconv -f txt %f
 # convert file to pdf
 map cp shell unoconv -f pdf %f
+
+# japanese image to text
+map cj shell tesseract -l jpn %f %f &
 
 # replace cw mapping
 map cc console rename
@@ -185,9 +132,7 @@ map gr shell ~/bin/ranger/recent_folders.sh database &
 map gR shell ~/bin/ranger/recent_folders.sh ag-sys &
 # map td shell ~/bin/ranger/recent_folders.sh fzf-cd &
 
-# }}}
-
-# General {{{
+# ** General
 # reload ranger mappings
 map t. source ~/.config/ranger/rc.conf
 map tr reload_cwd
@@ -198,11 +143,10 @@ alias reset_columns chain set column_ratios 1,3,5; map tm maximize_preview
 map tm maximize_preview
 
 map , mark_files toggle=True
-map tm tag_toggle
 map x mark_files toggle=True
 
 map o console shell%space
-map O  console -p6 shell  %f
+map O console -p6 shell  %f
 
 map tw chain draw_possible_programs; console open_with%space
 
@@ -216,9 +160,11 @@ map yp shell -d echo -n %d/%f | xsel -ib
 map yd shell -d echo -n %d    | xsel -ib
 map yn shell -d echo -n %f    | xsel -ib
 
-# }}}
+# shorter hardlink keybindings
+map ph paste_hardlink
+map ps paste_hardlinked_subtree
 
-# Colemak Movement {{{
+# ** Colemak Movement
 map h move left=1
 map n move down=1
 map e move up=1
@@ -232,19 +178,18 @@ pmap tk pager_move up=0.5 pages=True
 map k search_next
 map K search_next forward=False
 
-# }}}
-
-# Navigation {{{
+# ** Navigation
 map f console find%space
+map F console travel%space
 # see commands.py
-map F console fasd%space
+map tf console fasd%space
 map tp fzf_select
 map <space>p fzf_locate
 
 map l history_go -1
 map L history_go 1
 
-# Tab Movement {{{
+# *** Tab Movement
 map tt tab_new ~
 map gt tab_move 1
 map gT tab_move -1
@@ -264,10 +209,7 @@ map <space>o tab_move 0 10
 # added/modified gotos (g for stuff not in /home)
 map gb cd /bin
 
-# }}}
-# }}}
-
-# Sorting {{{
+# ** Sorting
 # (default o* mappings; changed to co*); change Order
 map cor toggle_option sort_reverse
 map coz set sort=random
@@ -289,9 +231,7 @@ map coA chain set sort=atime;     set sort_reverse=True
 map coT chain set sort=type;      set sort_reverse=True
 map coE chain set sort=extension; set sort_reverse=True
 
-# }}}
-
-# Git {{{
+# ** Git
 # add selection or highlighted files to git index (git add)
 map tga stage
 # remove from git index (git reset)
@@ -300,11 +240,6 @@ map tgu unstage
 map tgl log
 # can also show diff between selected files
 
-# }}}
-
-# Command Mode Maps {{{
+# ** Command Mode Maps
 # backspace a word
 cmap ¸ eval fm.ui.console.delete_word()
-
-# }}}
-# }}}
